2005-05-27  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/MicrosoftWindows.pm:
	per-interface RRD files named by MAC addresses, not interface name

2005-05-25  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoGeneric.pm: enchanced memory
	pools stats (line cards and VIP memory)

2005-05-23  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* templates/html-incblocks.txt:
	has-overview-subleaves replaced with has-overview-shortcuts,
	with multiple overviews per subtree

2005-05-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* templates/tset-list.html: Tokensets list now displays their sizes

2005-05-18  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/ttproclist.in: New utility for generating DDX files

2005-05-17  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DataAccess.pm: improved performance by caching

2005-05-13  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* xmlconfig/generic/rfc2670.docsis-if.xml: DOCSIS monitoring examples

	* perllib/Torrus/DevDiscover/RFC2670_DOCS_IF.pm:
	Added DOCSIS-specific selector actions

2005-05-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/RRDStorage.pm (updateRRD):
	$Torrus::Collector::RRDStorage::moveConflictRRD -- moving RRD files
	with conflicting structure

2005-05-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2670_DOCS_IF.pm:
	Downstream utilization added, and the subtrees rearranged.

2005-05-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* templates/default-rrd.html: Monitor names and comments displayed
	on the leaf HTML

2005-05-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoGeneric.pm:
	replaced CiscoGeneric::sensor-monitor and
	CiscoGeneric::sensor-monitor-regexp with CiscoSensor selector
