@@ -1,3 +1,7 @@
+2005-05-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* bin/collector.in: new command line option: --runalways
+
 2005-05-27  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover/MicrosoftWindows.pm:
